[ADZ-1308] ADZ-1308 preventing tag wrapping

--- a/repository-data/webfiles/src/main/resources/site/src/scss/rebrand/components/_api-catalogue.scss
+++ b/repository-data/webfiles/src/main/resources/site/src/scss/rebrand/components/_api-catalogue.scss
@@ -76,4 +76,7 @@
     float: right;
   }
 }
-  
+
+.nhsd-a-tag {
+    white-space: nowrap;
+}
